--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+-e git+git@github.com-peterFran:peterFran/LanguageListCreator@9327ad2908c36e72b9acca8c0e7b3df51a4c9990#egg=langtools-origin/python34
+pkginfo==1.2.1
+prettytable==0.7.2
 py==1.4.26
 pytest==2.6.4
+requests==2.5.1
+twine==1.4.0
+wheel==0.24.0
